--- a/app.json
+++ b/app.json
@@ -1,48 +1,49 @@
 {
-    "name": "Spotify Bio Changer",
-    "description": "Telegram Spotify Biography Changer",
-    "keywords": [
-      "telegram",
-      "spotify",
-      "music",
-      "good"
-    ],
-    "repository": "https://github.com/muhammedfurkan/Spotify-Telegram-Bio-Updater",
-    "env": {
-      "WEBHOOK": {
-        "description": "Setting this to ANYTHING will enable webhooks when in env mode",
-        "value": "ANYTHING"
-      },
-      "APP_ID": {
-        "description": "Get this value from https://my.telegram.org",
-        "value": ""
-      },
-       "API_ID": {
-        "description": "Get this value from https://my.telegram.org",
-        "value": ""
-      },
-      "CLIENT_ID": {
-        "description": "spotify client ID",
-        "value": ""
-      },
-      "CLIENT_SECRET": {
-        "description": "spotify client scret key",
-        "value": "",
-      },
-      "SHUTDOWN_COMMAND": {
-        "description": "stop command",
-        "value": "\/\/stop",
-        "required": false
-      },
-      "KEY": {
-        "description": "Key :)",
-        "value": "🎶",
-        "required": false
-      }
+  "name": "Spotify Bio Changer",
+  "description": "Telegram Spotify Biography Changer",
+  "keywords": [
+    "telegram",
+    "spotify",
+    "music",
+    "good"
+  ],
+  "repository": "https://github.com/muhammedfurkan/Spotify-Telegram-Bio-Updater",
+  "env": {
+    "WEBHOOK": {
+      "description": "Setting this to ANYTHING will enable webhooks when in env mode",
+      "value": "ANYTHING"
     },
-    "addons": [
-    ],
-    "buildpacks": [{
+    "APP_ID": {
+      "description": "Get this value from https://my.telegram.org",
+      "value": ""
+    },
+    "APP_HASH": {
+      "description": "Get this value from https://my.telegram.org",
+      "value": ""
+    },
+    "CLIENT_ID": {
+      "description": "spotify client ID",
+      "value": ""
+    },
+    "CLIENT_SECRET": {
+      "description": "spotify client scret key",
+      "value": "",
+    },
+    "SHUTDOWN_COMMAND": {
+      "description": "stop command",
+      "value": "\/\/stop",
+      "required": false
+    },
+    "KEY": {
+      "description": "Key :)",
+      "value": "🎶",
+      "required": false
+    }
+  },
+  "addons": [],
+  "buildpacks": [
+    {
       "url": "heroku/python"
-    }]
-  }
+    }
+  ]
+}
