--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
     "good"
   ],
   "repository": "https://github.com/muhammedfurkan/Spotify-Telegram-Bio-Updater",
+  "website": "https://github.com/muhammedfurkan",
   "env": {
     "WEBHOOK": {
       "description": "Setting this to ANYTHING will enable webhooks when in env mode",
