--- a/app.json
+++ b/app.json
@@ -8,35 +8,42 @@
         "userbot"
     ],
     "env":{
-        "APP_ID":{
-            "description":"Get this value from https://my.telegram.org",
-            "value":""
-        },
-        "APP_HASH":{
-            "description":"Get this value from https://my.telegram.org",
-            "value":""
-        },
-        "CLIENT_ID":{
-            "description":"spotify client ID",
-            "value":""
-        },
-        "CLIENT_SECRET":{
-            "description":"spotify client scret key",
-            "value":""
-        },
-        "SHUTDOWN_COMMAND":{
-            "description":"stop command",
-            "value":"\/\/stop",
-            "required":false
-        },
-        "KEY":{
-            "description":"Key :)",
-            "value":"🎶",
-            "required":false
+        "ENV":{
+            "APP_ID":{
+                "description":"Get this value from https://my.telegram.org",
+                "value":""
+            },
+            "APP_HASH":{
+                "description":"Get this value from https://my.telegram.org",
+                "value":""
+            },
+            "CLIENT_ID":{
+                "description":"spotify client ID",
+                "value":""
+            },
+            "CLIENT_SECRET":{
+                "description":"spotify client scret key",
+                "value":""
+            },
+            "SHUTDOWN_COMMAND":{
+                "description":"stop command",
+                "value":"\/\/stop",
+                "required":false
+            },
+            "KEY":{
+                "description":"Key :)",
+                "value":"🎶",
+                "required":false
+            }
         }
     },
     "addons":[
-        
+        {
+            "plan":"heroku-postgresql",
+            "options":{
+                "version":"12"
+            }
+        }
     ],
     "buildpacks":[
         {
